--- a/index.html
+++ b/index.html
@@ -6,8 +6,48 @@
     <title>Trabalho</title>
 </head>
 <body>
-<main></main>
-<footer><p>Pojeto comfins lucratvos, nota</p>
+    <main>
+        <section id="container">
+                <article class="cartao">
+                        <div class="cartao__conteudo">
+                                <h3>Programação</h3>
+                                <div class="cartao__conteudo__pergunta">
+                                        Quanto vale o projeto?
+                                </div>
+                                <div class="cartao__conteudo__resposta">
+                                        Nem ideia
+                                </div>
+                        </div>
+                </article>
+        </section>
+        <section id="container">
+            <article class="cartao">
+                    <div class="cartao__conteudo">
+                            <h3>Programação</h3>
+                            <div class="cartao__conteudo__pergunta">
+                                    Quanto vale o projeto?
+                            </div>
+                            <div class="cartao__conteudo__resposta">
+                                    Nem ideia
+                            </div>
+                    </div>
+            </article>
+    </section>
+    <section id="container">
+        <article class="cartao">
+                <div class="cartao__conteudo">
+                        <h3>Programação</h3>
+                        <div class="cartao__conteudo__pergunta">
+                                Quanto vale o projeto?
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                                Nem ideia
+                        </div>
+                </div>
+        </article>
+</section>
+</main>
+<footer><p>Pojeto com fins lucratvos, nota</p>
 </footer>
 </body>
 </html>
